# cg

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cg-library.cbp  cmake_install.cmake
examples/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/convex/: Makefile  ccw_contour_convex  cmake_install.cmake
examples/convex_hull/: Makefile  cmake_install.cmake  convex-hull-example.cbp  convex_hull  dynamic_convex_hull
examples/duglas_pecher/: CMakeLists.txt  Makefile  cmake_install.cmake  duglas_pecher  duglas_pecher-example.cbp  duglas_pecher.cpp
examples/new_task/: CMakeLists.txt  Makefile  cmake_install.cmake  new_task  new_task-example.cbp  new_task.cpp
examples/operations/: CMakeLists.txt  Makefile  ccw_convex_contains_point  cmake_install.cmake  contour_contains_point  diametr_of_set  diametr_of_set.cpp  first_problem  first_problem.cpp  operations-example.cbp  rectangle_intersects_segment  segments_intersect  summ_minkovskiy  summ_minkovskiy.cpp  triangle_contains_point  triangle_intersects_segment  triangulation_delone  triangulation_delone.cpp
examples/orientation/: Makefile  cmake_install.cmake  orientation_contour_ccw
examples/skip_list/: CMakeLists.txt  Makefile  cmake_install.cmake  skip_list  skip_list.cbp  skip_list.cpp
examples/triangulation/: Makefile  cmake_install.cmake  triangulation  triangulation-example.cbp
examples/viewer/: Makefile  cmake_install.cmake  viewer-example  viewer-example.cbp
examples/visibility_graph/: CMakeLists.txt  Makefile  cmake_install.cmake  visibility_graph  visibility_graph-example.cbp  (+1 more)
(+38 files in other folders)
