add_subdirectory(viewer)
add_subdirectory(operations)
add_subdirectory(orientation)
add_subdirectory(triangulation)
add_subdirectory(convex_hull)
add_subdirectory(convex)
add_subdirectory(duglas_pecher)
add_subdirectory(new_task)
add_subdirectory(visibility_graph)
add_subdirectory(skip_list)
add_subdirectory(visibility_graph2)
